Fix alignment issues on md screens

--- a/prop-house-webapp/src/components/AuctionHeader/AuctionHeader.module.css
+++ b/prop-house-webapp/src/components/AuctionHeader/AuctionHeader.module.css
@@ -48,7 +48,7 @@
   border-left: 1px solid rgba(0, 0, 0, 0.178);
 }
 
-@media only screen and (max-width: 576px) {
+@media (max-width: 1200px) {
   .rightSectionSubsection {
     text-align: left;
   }
